<resources>
    <string name="app_name">Sancti</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Sancti</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home">Home</string>
    <string name="translate">Translate signs and banners</string>
    <string name="attraction">Find attraction points</string>
    <string name="trips">Trip Journal</string>
    <string name="highlights">Highlights</string>
    <string name="fav">Favorites</string>
    <string name="landmark">Landmark recognition</string>

    <array name="places">
        <item>Tourist attraction</item>
        <item>Entertainment</item>
        <item>Restaurant</item>
        <item>Hotel</item>
        <item>Museum</item>
        <item>Hospital</item>
        <item>Airport</item>
        <item>Bus stop</item>
        <item>Arabian restaurant</item>
    </array>

    <array name="languages">
        "Simplified Chinese, English, French, Arabic, Thai, Spanish, Turkish, Portuguese, Japanese,
        German, Italian, Russian, Polish, Malay, Swedish, Finnish, Norwegian, Danish, Korean"
    </array>

    <array name="countries">
        <item>Algeria</item>
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Brazil</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Cote d\'Ivoire</item>
        <item>Croatia</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Finland</item>
        <item>France</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kuwait</item>
        <item>South Korea</item>
        <item>Lebanon</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mexico</item>
        <item>Morocco</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Panama</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Russia</item>
        <item>Saudi Arabia</item>
        <item>Singapore</item>
        <item>South Africa</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Thailand</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
    </array>

    <array name="iata">
        <item>ALG</item>
        <item>BUE</item>
        <item>SYD</item>
        <item>VIE</item>
        <item>MSQ</item>
        <item>BRU</item>
        <item>BSB</item>
        <item>BOG</item>
        <item>SJO</item>
        <item>ASK</item>
        <item>ZAG</item>
        <item>NIC</item>
        <item>PRG</item>
        <item>CPH</item>
        <item>CAI</item>
        <item>SAL</item>
        <item>HEL</item>
        <item>PAR</item>
        <item>ATL</item>
        <item>BER</item>
        <item>ATH</item>
        <item>GOH</item>
        <item>BUD</item>
        <item>RKV</item>
        <item>DEL</item>
        <item>JKT</item>
        <item>BGW</item>
        <item>DUB</item>
        <item>ROM</item>
        <item>KIN</item>
        <item>TYO</item>
        <item>AMM</item>
        <item>KWI</item>
        <item>SEL</item>
        <item>BEY</item>
        <item>KUL</item>
        <item>MLE</item>
        <item>MEX</item>
        <item>RBA</item>
        <item>AMS</item>
        <item>WLG</item>
        <item>OSL</item>
        <item>MCT</item>
        <item>PTY</item>
        <item>LIS</item>
        <item>SJU</item>
        <item>DOH</item>
        <item>MOW</item>
        <item>QCA</item>
        <item>SIN</item>
        <item>CPT</item>
        <item>MAD</item>
        <item>STO</item>
        <item>BRN</item>
        <item>BKK</item>
        <item>TUN</item>
        <item>ANK</item>
        <item>IEV</item>
        <item>AUH</item>
        <item>LON</item>
        <item>WAS</item>
    </array>

    <string name="select_attraction_country">select a country</string>
    <string name="attraction_keyword_search">What are you looking for?</string>
    <string name="attraction_search_error">Please enter the desired country and search keyword</string>
    <string name="search">Search</string>
    <string name="no_results_found">No results found</string>
    <string name="error_occured">An error has occurred</string>

    <string name="remove_fav">Remove</string>

    <string name="hotel_name">Hotel name</string>
    <string name="offer_price">Room price</string>
    <string name="hotel_location">Location</string>

    <string name="airline_code">Airline code</string>
    <string name="dep_time">Departs at</string>
    <string name="airport_code">Airport code</string>
    <string name="flight_duration">Duration</string>
    <string name="flight_price">Price</string>
    <string name="destination">Destination</string>


    <string name="added_to_fav">Added to favorites</string>

    <string name="highlight_desc_error">Please make sure to enter description and title</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>

    <string name="enter_country_name">Please enter a country name</string>
    <string name="no_hotels">No hotel offers available currently</string>
    <string name="current_weather">Current weather forecast in </string>
    <string name="no_weather">Weather forecast not available currently</string>

    <string name="asof">As of </string>
    <string name="is"> is </string>
    <string name="covid_state"> the state of covid-19 in </string>
    <string name="confirmed"> Confirmed cases</string>
    <string name="dead"> Death cases</string>
    <string name="recovered"> Recovered cases</string>

    <string name="day">Day: </string>
    <string name="min">Min temp: </string>
    <string name="max">Max temp: </string>

    <string name="searchforcountry">Search for a country</string>
    <string name="findhotels">Find hotels</string>
    <string name="findflights">Find flights</string>
    <string name="noflights">No flights available currently</string>


    <string name="enterlandmark">Enter a landmark image</string>
    <string name="showonmap">Show on map</string>

    <string name="text_not_rec">No text was recognised in the image</string>
    <string name="orig_lang">original language code: </string>
    <string name="target_lang_first">Please enter the target language first</string>
    <string name="target_lang">Target language</string>
    <string name="select_image">Select image</string>
    <string name="detected">detected text will appear here</string>

    <string name="trip_title_error">title should not start with a number or include any symbols</string>

    <string name="add_trip">Add a new trip</string>
    <string name="cancel">Cancel</string>

    <string name="from">From</string>
    <string name="depcountry">Departure country</string>
    <string name="depdate">Departure Date</string>
    <string name="redate">Return Date</string>
    <string name="redato">return date (optional)</string>
    <string name="adults">Number of adults</string>
    <string name="nadults">number of adult passengers</string>
    <string name="search_flights">Search flights</string>

    <string name="missing_info">Please fill in the required information</string>

    <string name="dimage">Download image</string>
    <string name="ddimage">Do you want to download this image</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="ds">downloaded successfully</string>
    <string name="any">Type anything</string>
    <string name="addedh">Added to highlights</string>
    <string name="dlog">Deleting Log</string>
    <string name="ddlog">Are you sure you want to delete this log?</string>
    <string name="logd">Log deleted successfully</string>
    <string name="coo">Coordinates: </string>
    <string name="name">Landmark: </string>
    <string name="add_to_highlights">add to highlights</string>
    <string name="add_new_trip">Add a new trip</string>
    <string name="yourtrips">Your trips</string>
    <string name="hochlichts">Highlights</string>
    <string name="favlabel">Favorites</string>
    <string name="attra">Attraction points</string>
    <string name="translatelabel">Translate</string>
    <string name="landma">Landmark recognition</string>


</resources>